deploy: b79908c259367537fd024511fca1b5bff2063781

--- a/index.html
+++ b/index.html
@@ -3886,6 +3886,12 @@ vertical-align: -.125em;
 <li><a href="https://iain99.github.io/S2S-Labs/Lab1/">Lab 1</a></li>
 <li><a href="https://iain99.github.io/S2S-Labs/Lab2/">Lab 2</a></li>
 <li><a href="https://iain99.github.io/S2S-Labs/Lab3/">Lab 3</a></li>
+<li><a href="https://iain99.github.io/S2S-Labs/Lab4/">Lab 4</a></li>
+<li><a href="https://iain99.github.io/S2S-Labs/Lab5/">Lab 5</a></li>
+<li><a href="https://iain99.github.io/S2S-Labs/Lab6/">Lab 6</a></li>
+<li><a href="https://iain99.github.io/S2S-Labs/Lab8/">Lab 8</a></li>
+<li><a href="https://iain99.github.io/S2S-Labs/Lab9/">Lab 9</a></li>
+<li><a href="https://iain99.github.io/S2S-Labs/Lab10/">Lab 10</a></li>
 </ul>
 
 
