--- a/Lab1/index.html
+++ b/Lab1/index.html
@@ -4030,7 +4030,7 @@ This is where the question text would go.
 </div>
 </div>
 </div>
-<p>Over the course of the semester, we will have 10 lab slots - one every week on a Wednesday. The labs offer an opportunity to practise using RStudio yourself and follow along with the code being demonstrated. After all lab sessions have occurred each week, a complete version of that week’s lab, showing solutions to all the tasks as well as separate solutions to the Further Exercises, will be made available on the <a href="https://moodle.gla.ac.uk/course/view.php?id=43654" target="_blank">S2S Moodle page</a>.</p>
+<p>Over the course of the semester, we will have 10 lab slots - one every week on a Wednesday. The labs offer an opportunity to practise using RStudio yourself and follow along with the code being demonstrated. After all lab sessions have occurred each week, a complete version of that week’s lab, showing solutions to all the tasks as well as separate solutions to the Further Exercises, will be made available on the S2S Moodle page.</p>
 <p>The first three weeks of labs will follow <a href="https://read.kortext.com/reader/pdf/92741/1" target="_blank">Chapter 1 What Is R?</a> of <em>Probability and Statistics with R</em> and provide an introduction to the basics of using R to work with data. You can use this chapter to find extra details of what’s covered in the first three labs but everything that is examinable will be covered in the labs themselves.</p>
 <p>There are two pieces of assessment associated with these labs; an R assessment and a Lab Report. More details of these will be provided closer to the time.</p>
 
