--- a/index.html
+++ b/index.html
@@ -3882,7 +3882,7 @@ vertical-align: -.125em;
 <h1 data-number="1"><span class="header-section-number">1</span> Welcome to S2S Labs!</h1>
 <p>This site contains the content for each lab. Click a link below to view the lab material.</p>
 <ul>
-<li><a href="https://iain99.github.io/S2S-Labs/Lab0/">Lab 0</a></li>
+<li><a href="../Lab0/">Lab 0</a></li>
 <li><a href="https://iain99.github.io/S2S-Labs/Lab1/">Lab 1</a></li>
 <li><a href="https://iain99.github.io/S2S-Labs/Lab2/">Lab 2</a></li>
 <li><a href="https://iain99.github.io/S2S-Labs/Lab3/">Lab 3</a></li>
