--- a/index.html
+++ b/index.html
@@ -3913,16 +3913,16 @@ vertical-align: -.125em;
 <h1 data-number="1"><span class="header-section-number">1</span> Welcome to S2S Labs!</h1>
 <p>This site contains the content for each lab. Click a link below to view the lab material.</p>
 <ul>
-<li><a href="../Lab0/">Lab 0</a></li>
-<li><a href="https://iain99.github.io/S2S-Labs/Lab1/">Lab 1</a></li>
-<li><a href="https://iain99.github.io/S2S-Labs/Lab2/">Lab 2</a></li>
-<li><a href="https://iain99.github.io/S2S-Labs/Lab3/">Lab 3</a></li>
-<li><a href="https://iain99.github.io/S2S-Labs/Lab4/">Lab 4</a></li>
-<li><a href="https://iain99.github.io/S2S-Labs/Lab5/">Lab 5</a></li>
-<li><a href="https://iain99.github.io/S2S-Labs/Lab6/">Lab 6</a></li>
-<li><a href="https://iain99.github.io/S2S-Labs/Lab8/">Lab 8</a></li>
-<li><a href="https://iain99.github.io/S2S-Labs/Lab9/">Lab 9</a></li>
-<li><a href="https://iain99.github.io/S2S-Labs/Lab10/">Lab 10</a></li>
+<li><a href="../Lab0/">Induction Lab</a></li>
+<li><a href="../Lab1/">Lab 1</a></li>
+<li><a href="../Lab2/">Lab 2</a></li>
+<li><a href="../Lab3/">Lab 3</a></li>
+<li><a href="../Lab4/">Lab 4</a></li>
+<li><a href="../Lab5/">Lab 5</a></li>
+<li><a href="../Lab6/">Lab 6</a></li>
+<li><a href="../Lab8/">Lab 8</a></li>
+<li><a href="../Lab9/">Lab 9</a></li>
+<li><a href="../Lab10/">Lab 10</a></li>
 </ul>
 
 
