deploy: 0416909de17139a9176386968a0be9181c57c72c

--- a/Lab0/index.html
+++ b/Lab0/index.html
@@ -7,7 +7,7 @@
 <meta name="viewport" content="width=device-width, initial-scale=1.0, user-scalable=yes">
 
 
-<title>S2S Induction Lab</title>
+<title>Level 2 Statistics</title>
 <style>
 code{white-space: pre-wrap;}
 span.smallcaps{font-variant: small-caps;}
@@ -3977,7 +3977,7 @@ margin: 1em 0;
       <a href="./index.html" class="sidebar-logo-link">
       </a>
     <div class="sidebar-title mb-0 py-0">
-      <a href="./">S2S Induction Lab</a> 
+      <a href="./">Level 2 Statistics</a> 
     </div>
       </div>
         <div class="mt-2 flex-shrink-0 align-items-center">
@@ -4028,7 +4028,7 @@ margin: 1em 0;
 
 <header id="title-block-header" class="quarto-title-block default">
 <div class="quarto-title">
-<h1 class="title">S2S Induction Lab</h1>
+<h1 class="title">Level 2 Statistics</h1>
 </div>
 
 
